--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Node.js dependencies
+node_modules/
+package-lock.json
+
+# Tailwind CSS build output
+dist/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor & System Files
+.DS_Store
+.vscode/
+.idea/
+*.swp
+
+# Environment variables (security)
+.env
+.env.local
+.env.*.local
+
+# Mac-specific files
+._*
+
 # Logs
 logs
 *.log
